# nyc-taxi-tips-prediction

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE.txt  Makefile  README.md  app.py  docker-compose.yml  dvc.yaml  launch_app.bat  main.py  pre_commit_output.txt  pyproject.toml  pyright_errors.txt  validate_system.bat
.github/workflows/: ci.yml  lint.yml
config/: config.yaml  params.yaml  schema.yaml
docker/: backend.Dockerfile  frontend.Dockerfile
notebooks/: fti_eda.ipynb
references/: 01_planning.md  02_project_requirements.md  03_user_story.md  04_project_overview.md  folder_structure.md  folder_structure.txt
reports/docs/: app_dashboard.md  containerization_report.md  continuous_integration_report.md  dvc_pipeline_architecture.md  test_suite_report.md
reports/docs/agent/: agent_llm_assessment.md  agent_tools_abstraction_report.md
reports/docs/architecture/: agentic_workflow_report.md  app_dashboard.md  containerization_report.md  dvc_pipeline_architecture.md
reports/docs/decisions/: agent_llm_assessment.md  agent_tools_integration.md
reports/docs/evaluations/: codebase_review.md  codebase_review_v1.0.md  system_validation_report.md  test_suite_report.md
reports/docs/pipeline/: 04_feature_engineering_report.md
reports/docs/references/: eda_findings_report.md  prd.md  project_charter.md  project_overview.md
reports/docs/runbooks/: rules_and_guardrails.md
reports/docs/stages/: 01_data_ingestion_report.md  02_data_validation_report.md  03_data_transformation_report.md  04_feature_engineering_report.md  05_model_trainer_report.md  06_model_evaluation_report.md
reports/docs/workflows/: 03_data_transformation_report.md  04_feature_engineering_report.md  05_model_trainer_report.md  06_model_evaluation_report.md  continuous_integration_report.md
src/agents/: __init__.py  prompts.py  taxi_analyst_agent.py
src/api/: predict_api.py
src/app/: __init__.py  data_loaders.py  main.py  styles.py
src/app/pages/: chat.py  dashboard.py
src/components/: data_ingestion.py  data_transformation.py  data_validation.py  feature_engineering.py  model_evaluation.py  model_trainer.py  predict_model.py
src/config/: configuration.py
src/constants/: __init__.py
src/entity/: api_entity.py  config_entity.py
src/pipeline/: stage_01_data_ingestion.py  stage_02_data_validation.py  stage_03_data_transformation.py  stage_04_feature_engineering.py  stage_05_model_trainer.py  stage_06_model_evaluation.py
src/tools/: __init__.py  taxi_prediction_tool.py
src/utils/: common.py  exception.py  feature_utils.py  logger.py  mlflow_config.py  model_utils.py
tests/: conftest.py
tests/unit/: test_agent_tools.py  test_api.py  test_data_ingestion.py  test_data_transformation.py  test_feature_engineering.py  test_model_evaluation.py  test_model_trainer.py  test_predict_model.py  test_taxi_analyst_agent.py
