[project]
name = "nyc-taxi-tips-prediction"
version = "0.1.0"
description = "Production-grade MLOps system to predict NYC Yellow Taxi tip amounts using the FTI pattern."
readme = "README.md"
authors = [
    { name = "Sebastian Garrido", email = "sebastiangarrido2790@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "xgboost>=2.0.0",
    "scikit-learn>=1.3.0",
    "mlflow>=2.7.0",
    "pydantic>=2.4.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0.1",
    "dvc>=3.0.0",
    "polars>=0.19.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "rich>=13.5.0",
    "python-dotenv>=1.0.0",
    "streamlit>=1.54.0",
    "plotly>=6.5.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "mypy>=1.6.0",
    "ipykernel>=6.25.0",
    "black>=23.9.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
